[package]
name = "jabba-lib"
version = "0.1.0"
authors = ["Laszlo Szathmary <jabba.laci@gmail.com>"]
edition = "2021"
description = "A simple utility library."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
