[package]
name = "jabba-lib"
version = "0.1.5"
authors = ["Laszlo Szathmary, alias Jabba Laci <jabba.laci@gmail.com>"]
edition = "2021"
description = "A simple utility library, inspired mainly by Python."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jabbalaci/jabba-lib"
documentation = "https://docs.rs/jabba-lib"
keywords = ["utility", "utils", "python", "clipboard"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
which = "4.2.5"
cfg-if = "1.0.0"
clipboard-win = "4.4.2"
